[ADD] day1 of intensive: - bases of telegram bots creation - connection to the zoho crm and getting all leads with creating InlinKkeyboard

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-TELEGRAM_TOKEN=TOKEN
-OPENAI_API_KEY=KEY
-ZOHO_CLIENT_ID=ID
-ZOHO_CLIENT_SECRET=SECRET
+TELEGRAM_TOKEN=VALUE
+OPENAI_API_KEY=VALUE
+ZOHO_CLIENT_ID=VALUE
+ZOHO_CLIENT_CODE=VALUE
+ZOHO_CLIENT_SECRET=VALUE
+ZOHO_REFRESH_TOKEN=VALUE
+ZOHO_ACESS_TOKEN=VALUE
+ADMIN_CHAT_ID=VALUE
